--- a/app/views/ftf/claim/v2-6/upload3.html
+++ b/app/views/ftf/claim/v2-6/upload3.html
@@ -4,11 +4,6 @@
 
 {% block content %}
 
-<head>
-<link rel="stylesheet" type="text/css" href="styles.css">
-
-
-
 
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
@@ -110,9 +105,9 @@
 
 
 <div style="width: 630px; height: 321px; position: relative">
-  <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDSTransportWebsite-Bold; font-weight: 700; line-height: 30px; word-wrap: break-word">Files uploaded</div>
+  <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: 700; line-height: 30px; word-wrap: break-word">Files uploaded</div>
   <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDSTransportWebsite; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
+    <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
     <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
     <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
   </div>
@@ -218,7 +213,7 @@
 </button>
 
 
-</head>
+
 </main>
 
 {% endblock %}
