--- a/app/views/ftf/claim/v2-2/upload4.html
+++ b/app/views/ftf/claim/v2-2/upload4.html
@@ -31,7 +31,7 @@
     
     <div id="form">
     <h2 class="govuk-heading-l">1. Claim form</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are DOC and DOCX. Maximum file size is 20MB.</p>
     </div>
 
 
@@ -65,7 +65,7 @@
 
 <div id="evidence">
     <h2 class="govuk-heading-l">2. Evidence</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 </div>
 
 
@@ -134,7 +134,7 @@
 
           <div style="width: 630px; height: 202px; position: relative">
             <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
@@ -205,7 +205,7 @@
 
           <div style="width: 630px; height: 202px; position: relative">
             <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
@@ -244,7 +244,7 @@
 
           <div style="width: 630px; height: 202px; position: relative">
             <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
@@ -292,7 +292,7 @@
           
             <div style="width: 630px; height: 202px; position: relative">
             <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
