--- a/app/views/ftf/claim/v2-4/upload3.html
+++ b/app/views/ftf/claim/v2-4/upload3.html
@@ -29,9 +29,8 @@
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
     <h2 class="govuk-heading-l">1. Claim form</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are DOC and DOCX. Maximum file size is 20MB.</p>
 
-    <br><br>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -55,7 +54,7 @@
 <br><br>
 
     <h2 class="govuk-heading-l">2. Evidence</h2>
-    <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
     <br>
 
