--- a/app/views/ftf/claim/v2-5/activity1 copy.html
+++ b/app/views/ftf/claim/v2-5/activity1 copy.html
@@ -153,7 +153,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="/_common/not-testing.html" aria-describedby="list-convictions-status">
-                  Your application outcome
+                  Read and sign agreement
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
