--- a/app/views/ftf/claim/v2-5/activity1.html
+++ b/app/views/ftf/claim/v2-5/activity1.html
@@ -147,13 +147,13 @@
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Read and sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="/_common/not-testing.html" aria-describedby="list-convictions-status">
-                  Your application outcome
+                  Read and sign agreement
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
